# dodoo86

Atmel_stuffs/Interact/: Interact.atsln
Atmel_stuffs/Joystickled/: Joystickled.atsln
Atmel_stuffs/LedBlinker/: LedBlinker.atsln
Atmel_stuffs/LedDimming/: LedDimming.atsln
Atmel_stuffs/UART_oneCharacter/: UART_oneCharacter.atsln
Atmel_stuffs/UART_properley/: UART_properley.atsln
Atmel_stuffs/UART_stdioH/: UART_stdioH.atsln
Atmel_stuffs/epromBasic/: epromBasic.atsln
Exam_practice/: README.md
Exam_practice/Fish_Tank/: Aquarium.cpp  Aquarium.h  CMakeLists.txt  Clownfish.cpp  Clownfish.h  Fish.cpp  Fish.h  Kong.cpp  Kong.h  Tang.cpp  Tang.h  main.cpp
Exam_practice/Matrices/: CMakeLists.txt  main.cpp
Exam_practice/Pirate/: CMakeLists.txt  Pirate.cpp  Pirate.h  Ship.cpp  Ship.h  main.cpp
Exam_practice/RobisTask/: CMakeLists.txt  Flower.cpp  Flower.h  Garden.cpp  Garden.h  Plant.cpp  Plant.h
Exam_practice/Simetry/: CMakeLists.txt  main.cpp
Exam_practice/Weekly_feedback_evaluator/: CMakeLists.txt  main.cpp
Exam_practice/Word_reserver/: CMakeLists.txt  main.cpp
Exam_practice/Zoo/: Animal.cpp  Animal.h  CMakeLists.txt  Elephant.cpp  Elephant.h  Lion.cpp  Lion.h  Monkey.cpp  Monkey.h  Worker.cpp  Worker.h  (+1 more)
Week2/Day-4/Drawing/: CMakeLists.txt  Project3.cpp  Project3.h  draw.cpp  main.cpp  project1.cpp  project1.h  project2.cpp  project2.h  project4.cpp  project4.h  project5.cpp  project5.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h
Week3/: gitignore.txt
(+267 files in other folders)
